--- a/source/i18n/translating_content.txt
+++ b/source/i18n/translating_content.txt
@@ -1,3 +1,7 @@
+====================
+Translating content
+====================
+
 Content translations are handled by well-established `LinguaPlone add-on product <http://plone.org/products/linguaplone>`_.
 
 See example: http://svn.plone.org/svn/plone/LinguaPlone/tags/2.1.1/Products/LinguaPlone/examples/LinguaItem.py
@@ -15,6 +19,7 @@ Example::
 	try:
         object.addTranslation(lang)
     except AlreadyTranslated:
+    	# Note: AlreadyTranslated is always risen if Products.Linguaplone is not installed
         pass
 
     translated = object.getTranslation(lang)
