Added tab to spaces script.
Run tab to spaces script.

--- a/source/content/history.txt
+++ b/source/content/history.txt
@@ -5,7 +5,7 @@ History and versioning
 `Versioning allows you to restore and diff previous copies of the same content <http://plone.org/documentation/manual/plone-3-user-manual/managing-content/versioning-plone-v3.0-plone-v3.2>`_.
 More about `CMFEditions here <http://plone.org/products/cmfeditions/documentation/refmanual/cmfeditionoverview>`_.
 
-See also `this versioning for custom content types tutorial <http://www.uwosh.edu/ploneprojects/documentation/how-tos/how-to-enable-versioning-history-tab-for-a-custom-content-type>`_. 
+See also `this versioning for custom content types tutorial <http://www.uwosh.edu/ploneprojects/documentation/how-tos/how-to-enable-versioning-history-    -for-a-custom-content-type>`_. 
 
 By default, version history is not enabled for custom content types.
 
@@ -98,7 +98,7 @@ There is not yet (Plone 3.1.x) GenericSetup XML way to do it.
       
 # If you have customized the edit process of your content type, 
   make sure that your edit action traverses to update_version_before_edit.cpt. For hints how to do this,
-  see portal_form_controller actions tab. Example::
+  see portal_form_controller actions     . Example::
   
   
     ## Script (Python) "diagnose_content_edit"
