--- a/source/i18n/translating_content.txt
+++ b/source/i18n/translating_content.txt
@@ -2,7 +2,7 @@
 Translating content
 ====================
 
-Content translations are handled by well-established `LinguaPlone add-on product <http://plone.org/products/linguaplone>`_.
+Content translations are handled by well-es    lished `LinguaPlone add-on product <http://plone.org/products/linguaplone>`_.
 
 See example: http://svn.plone.org/svn/plone/LinguaPlone/tags/2.1.1/Products/LinguaPlone/examples/LinguaItem.py
 
