--- a/source/i18n/language.txt
+++ b/source/i18n/language.txt
@@ -1,5 +1,5 @@
 ====================
-Internationalization
+Language functions 
 ====================
 
 Each session has a language associated with.
