--- a/source/i18n/localization.txt
+++ b/source/i18n/localization.txt
@@ -50,7 +50,19 @@ Message ids must be unicode strings.
 
 When my_text is run through context.translate() function the actual translation is performed.
 Various user interface elements, like TAL page templates, perform this automatically
-when being processed.  	
+when being processed.
+
+You also need to have the following ZCML entry:
+
+.. code-block:: xml
+
+	<configure
+	    xmlns:i18n="http://namespaces.zope.org/i18n">
+	
+	    <i18n:registerTranslations directory="locales" />
+	
+	</configure>
+  	
 
 There are also other message id markers in code outside Python domain
 
@@ -59,6 +71,9 @@ There are also other message id markers in code outside Python domain
 * GenericSetup XML have their own mechanism
 
 * TAL page templates have their own mechanism
+
+Plone (at least 3.3) uses only file path and name to search the translation files.
+Information in the .po file headers is ignored.
 
 PlacessTranslationService
 -------------------------
@@ -81,9 +96,89 @@ generation of .mo files of your product .po files.
 
 Examples
 
+* `i18ndude Python package <http://pypi.python.org/pypi/i18ndude>`_
+
 * `i18ndude example for Plone 3.0 and later <http://maurits.vanrees.org/weblog/archive/2007/09/i18n-locales-and-plone-3.0>`_
 
-* `i18ndude example for Plone 2.5 <http://blogs.ingeniweb.com/blogs/user/7/tag/i18ndude/>`_ 
+* `i18ndude example for Plone 2.5 <http://blogs.ingeniweb.com/blogs/user/7/tag/i18ndude/>`_
+
+Setting up folder structure for Finnish and English 
+===================================================
+
+Example::
+
+	mkdir locales
+	mkdir locales/fi
+	mkdir locales/en
+	mkdir locales/fi/LC_MESSAGES
+	mkdir locales/en/LC_MESSAGES
+
+Creating .pot base file
+=======================
+
+Example::
+
+	i18ndude rebuild-pot --pot locales/mydomain.pot --create your.app.package .	
+
+Managing .po files
+===================
+
+Example shell script to manage i18n files. Change PRODUCTNAME to reflect the
+actual package of your product:
+
+.. code-block:: sh
+
+	#!/bin/sh
+	#
+	# Shell script to manage .po files.
+	# 
+	# Run this file in the folder main __init__.py of product
+	# 
+	# E.g. if your product is yourproduct.name
+	# you run this file in yourproduct.name/yourproduct/name 
+	#
+	#
+	# Copyright 2009 Twinapex Research http://www.twinapex.com
+	#
+	
+	# Assume the product name is the current folder name
+	CURRENT_PATH=`pwd` 
+	PRODUCTNAME="yourproduct.app"
+	
+	# List of languages
+	LANGUAGES="en fi"
+	
+	# Create locales folder structure for languages
+	install -d locales
+	for lang in $LANGUAGES; do
+		install -d locales/$lang/LC_MESSAGES
+	done
+	
+	# Rebuild .pot
+	i18ndude rebuild-pot --pot locales/$PRODUCTNAME.pot --create $PRODUCTNAME .
+	
+	# Compile po files
+	for lang in $(find locales -mindepth 1 -maxdepth 1 -type d); do
+	
+	    if test -d $lang/LC_MESSAGES; then
+	    		
+			PO=$lang/LC_MESSAGES/${PRODUCTNAME}.po
+	
+	    	# Create po file if not exists
+	    	touch $PO 
+	
+			# Sync po file
+			echo "Syncing $PO"
+			i18ndude sync --pot locales/$PRODUCTNAME.pot $PO    	
+	    	
+	    	# Compile .po to .mo
+	    	MO=$lang/LC_MESSAGES/${PRODUCTNAME}.mo
+	    	echo "Compiling $MO"
+	        msgfmt -o $MO $lang/LC_MESSAGES/${PRODUCTNAME}.po
+	    fi
+	done
+
+
 
 Other
 -----
