Updated few broken indexes and bad reST formatting

--- a/source/i18n/index.txt
+++ b/source/i18n/index.txt
@@ -4,17 +4,17 @@ Internationalization
 
 Plone has three different internationalization subsystems
 
-* Translating user interface layer by using gettext (zope.i18n, zope.i18nmessageid packages)
+* Translating user interface layer by using gettext - zope.i18n, zope.i18nmessageid packages
 
-* Adapting locale specific settings for the site (plone.i18n package)
+* Adapting locale specific settings for the site - plone.i18n package
 
-* Having multilingual content (Products.Linguapone)
+* Managing multilingual content - Products.Linguaplone add-on product
 
 
 .. toctree::
     :maxdepth: 2
 
-	localization
+    localization
     language
     translating_content
 
