--- a/source/i18n/index.txt
+++ b/source/i18n/index.txt
@@ -1,12 +1,12 @@
-==========================
-Internationalization
-==========================
+============================
+Internationalization (i18n)
+============================
 
 Plone has three different internationalization subsystems
 
-* Translating user interface layer by using gettext - zope.i18n, zope.i18nmessageid packages
+* Translating user interface text strings by using gettext - zope.i18n, zope.i18nmessageid packages
 
-* Adapting locale specific settings for the site - plone.i18n package
+* Adapting locale specific settings for the site, like time format - plone.i18n package
 
 * Managing multilingual content - Products.Linguaplone add-on product
 
